--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,5 @@
-.App {
+/* .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
@@ -35,4 +24,55 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+body{
+  background-image: linear-gradient(75deg, rgb(240, 245, 255) , rgb(227, 230, 235));
+}
+
+.bgr{
+  background-image: linear-gradient(-15deg, rgb(255, 255, 255), rgb(222, 248, 255));
+}
+.nv{
+   display: "flex";
+  justify-content: "center";
+  box-shadow: 0 8px 6px -6px #999;
+  background-color: rgb(148, 173, 219);
+}
+
+.main{
+  box-shadow: 5px 2px 3px 0.2px #999;
+}
+
+.ctr{
+  text-align: center;
+}
+
+.ctr > button{
+  margin: 10px;
+   box-shadow: -0.5px 2px 3px 0.2px #999;
+}
+
+.alrt{
+  width: auto;
+  padding: 2px 5px;
+  margin-left: 5px;
+  text-align: center;
+}
+
+.wth{
+  width: 25%;
+}
+
+.wtfrm{
+  position: relative;
+  display: block ruby;
+  text-align: center;
+  margin:3% 0%;
+}
+.wtfrm > button {
+  margin-left: 5%;
+}
+.form-label{
+  margin-right: 5%;
 }
